<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textadaptive"
            android:textSize="22sp"
            android:id="@+id/adaptiveswitch"
            android:layout_weight="3"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donotdisturb"
            android:textSize="22sp"
            android:id="@+id/disturbswitch"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textparts"
            android:textSize="22sp"
            android:id="@+id/textparts"
            android:textColor="@android:color/black"
            android:layout_weight="3"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checklegs"
            android:textSize="18sp"
            android:id="@+id/checklegs"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkcore"
            android:textSize="18sp"
            android:id="@+id/checkcore"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>



        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkstomach"
            android:textSize="18sp"
            android:id="@+id/checkstomach"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textarms"
            android:textSize="18sp"
            android:id="@+id/checkarms"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textfullbody"
            android:textSize="18sp"
            android:id="@+id/checkfullbody"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textgoals"
            android:textSize="22sp"
            android:id="@+id/textgoals"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_weight="3"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkcardio"
            android:textSize="18sp"
            android:id="@+id/checkcardio"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkfatloss"
            android:textSize="18sp"
            android:id="@+id/checkfatloss"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>



        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkmassgain"
            android:textSize="18sp"
            android:id="@+id/checkmassgain"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkstrength"
            android:textSize="18sp"
            android:id="@+id/checkstrength"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkflexibility"
            android:textSize="18sp"
            android:id="@+id/checkflexibility"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>

    </LinearLayout>
</ScrollView>